# Tennis-Video-Extraction

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: benchmark-results.md  implementation-plan.md  spec.md  validation-results.md
models/: README.md
scripts/: prepare_roboflow_dataset.py
src/tennis_tracker/: __init__.py  __main__.py  benchmark.py  cli.py  coordinates.py  court.py  detection.py  diagnostics.py  optimization.py  output.py  pipeline.py  render.py  smoothing.py  tracking.py  train_ball.py  train_court.py  types.py  validation.py  video.py
src/tennis_tracker/training/: __init__.py  ball.py  court.py
tests/integration/: test_process_short_video.py
tests/unit/: test_benchmark.py  test_coordinates.py  test_court_geometry.py  test_detection.py  test_diagnostics.py  test_optimization.py  test_output.py  test_prepare_roboflow_dataset.py  test_render.py  test_smoke.py  test_smoothing.py  test_tracking.py  test_training_cli.py  test_validation.py  test_video.py
