[project]
name = "tennis-tracker"
version = "0.1.0"
description = "Tennis video player/ball tracking and court-plane coordinate extraction"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.9",
    "ultralytics>=8.4.0",
    "roboflow>=1.1",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
